# QtWasmTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  main.qml  project.py
.github/workflows/: BuildDeploy.yml
